# apotheosession

./: AGENTS.md  pyproject.toml
apotheosession/: converter.py  opencode_schema.py
tests/: test_converter.py  test_opencode_schema.py
